// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`normalizeOptions client host and port should set correct options 1`] = `
Object {
  "client": Object {
    "host": "my.host",
    "path": "/ws",
    "port": 9000,
  },
  "contentBasePublicPath": "/",
  "dev": Object {},
  "hot": true,
  "liveReload": true,
  "serveIndex": true,
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions client path should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/custom/path",
  },
  "contentBasePublicPath": "/",
  "dev": Object {},
  "hot": true,
  "liveReload": true,
  "serveIndex": true,
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions client path without leading/ending slashes should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/custom/path",
  },
  "contentBasePublicPath": "/",
  "dev": Object {},
  "hot": true,
  "liveReload": true,
  "serveIndex": true,
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions contentBase array should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "contentBase": Array [
    "/path/to/dist1",
    "/path/to/dist2",
  ],
  "contentBasePublicPath": "/",
  "dev": Object {},
  "hot": true,
  "liveReload": true,
  "serveIndex": true,
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions contentBase string should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "contentBase": "/path/to/dist",
  "contentBasePublicPath": "/",
  "dev": Object {},
  "hot": true,
  "liveReload": true,
  "serveIndex": true,
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions contentBasePublicPath string should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "contentBasePublicPath": "/content-base-public-path",
  "dev": Object {},
  "hot": true,
  "liveReload": true,
  "serveIndex": true,
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions dev is set should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "contentBasePublicPath": "/",
  "dev": Object {
    "serverSideRender": true,
  },
  "hot": true,
  "liveReload": true,
  "serveIndex": true,
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions hot is false should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "contentBasePublicPath": "/",
  "dev": Object {},
  "hot": false,
  "liveReload": true,
  "serveIndex": true,
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions hot is only should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "contentBasePublicPath": "/",
  "dev": Object {},
  "hot": "only",
  "liveReload": true,
  "serveIndex": true,
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions hot is true should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "contentBasePublicPath": "/",
  "dev": Object {},
  "hot": true,
  "liveReload": true,
  "serveIndex": true,
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions liveReload is false should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "contentBasePublicPath": "/",
  "dev": Object {},
  "hot": true,
  "liveReload": false,
  "serveIndex": true,
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions liveReload is true should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "contentBasePublicPath": "/",
  "dev": Object {},
  "hot": true,
  "liveReload": true,
  "serveIndex": true,
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions no options should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "contentBasePublicPath": "/",
  "dev": Object {},
  "hot": true,
  "liveReload": true,
  "serveIndex": true,
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions transportMode custom client path should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "contentBasePublicPath": "/",
  "dev": Object {},
  "hot": true,
  "liveReload": true,
  "serveIndex": true,
  "transportMode": Object {
    "client": "/path/to/custom/client/",
    "server": "ws",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions transportMode custom server class should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "contentBasePublicPath": "/",
  "dev": Object {},
  "hot": true,
  "liveReload": true,
  "serveIndex": true,
  "transportMode": Object {
    "client": "ws",
    "server": [Function],
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions transportMode custom server path should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "contentBasePublicPath": "/",
  "dev": Object {},
  "hot": true,
  "liveReload": true,
  "serveIndex": true,
  "transportMode": Object {
    "client": "ws",
    "server": "/path/to/custom/server/",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions transportMode sockjs string should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "contentBasePublicPath": "/",
  "dev": Object {},
  "hot": true,
  "liveReload": true,
  "serveIndex": true,
  "transportMode": Object {
    "client": "sockjs",
    "server": "sockjs",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions transportMode ws object should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "contentBasePublicPath": "/",
  "dev": Object {},
  "hot": true,
  "liveReload": true,
  "serveIndex": true,
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions transportMode ws string should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "contentBasePublicPath": "/",
  "dev": Object {},
  "hot": true,
  "liveReload": true,
  "serveIndex": true,
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
  "watchOptions": Object {},
}
`;

exports[`normalizeOptions watchOptions should set correct options 1`] = `
Object {
  "client": Object {
    "path": "/ws",
  },
  "contentBasePublicPath": "/",
  "dev": Object {},
  "hot": true,
  "liveReload": true,
  "serveIndex": true,
  "transportMode": Object {
    "client": "ws",
    "server": "ws",
  },
  "watchOptions": Object {
    "poll": true,
  },
}
`;
